--- a/index.html
+++ b/index.html
@@ -134,6 +134,31 @@ Sys.WebForms.PageRequestManager.getInstance()._updateControls([], [], [], 90);
 		   .offer-section{
 				 width:25%;
 			 }
+
+			 @media only screen and (max-width: 600px) {
+			     #enquiry-form-visibility {
+			         right: 0px !important	;
+			     }
+
+					 .logo{
+						 width : 58%;
+					 }
+
+					 #header{
+						 min-height: 15%;
+					}
+					body {
+					    padding-top: 27%;
+					}
+			 }
+
+			 #geu-celebration{
+           padding: 0px;
+			 }
+
+
+
+
 		</style>
 
 	    
