--- a/index.html
+++ b/index.html
@@ -162,15 +162,10 @@ Sys.WebForms.PageRequestManager.getInstance()._updateControls([], [], [], 90);
 		</style>
 
 	    
-    <header>
+        <header>
         <nav id="header" class="navbar navbar-fixed-top">
             <div id="header-container" class="container navbar-container">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
 
                     <a id="brand" class="navbar-brand logo" href="http://gehu.ac.in/engg-admissions2018/#" data-ss1525723066="1"><img class="img-responsive brandLogo" src="./GEHU_files/gehu-logo.svg" alt="GEU Logo"></a>
                     <a id="geu-celebration" class="navbar-brand anniversary-logo" href="http://gehu.ac.in/engg-admissions2018/#" data-ss1525723066="1"><img class="img-responsive brandLogo anniversary-logo" src="./GEHU_files/anniversary-logo.svg" alt=" Logo"></a>
@@ -178,7 +173,7 @@ Sys.WebForms.PageRequestManager.getInstance()._updateControls([], [], [], 90);
                 <div id="navbar" class="collapse navbar-collapse">
                     <h1>Admission Open</h1>
                     <ul class="enquire-now-form">
-                        <li class="enquire-now-btn"><a href="http://gehu.ac.in/engg-admissions2018/#" id="enquireNow-btn" data-ss1525723066="1">Enquire Now </a>
+                        <li class="enquire-now-btn"><a id="enquireNow-btn" data-ss1525723066="1" onclick="document.getElementById('enquiry-form-visibility').style.visibility = 'visible'">Enquire Now </a>
                         </li>
                     </ul>
                 </div>
