--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@ Sys.WebForms.PageRequestManager.getInstance()._updateControls([], [], [], 90);
 			 }
 
 
+                .navbar{
+				 margin-bottom: 0;
+			 }
 
 
 		</style>
