--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ Sys.WebForms.PageRequestManager.getInstance()._updateControls([], [], [], 90);
 					 }
 
 					 #header{
-						 min-height: 15%;
+						 min-height: 88px;
 					}
 					body {
 					    padding-top: 27%;
