--- a/index.html
+++ b/index.html
@@ -460,6 +460,12 @@ Sys.WebForms.PageRequestManager.getInstance()._updateControls([], [], [], 90);
     </div>
 </div>
     
+<div class="geu-accordion-content"  style="padding-top:0px;">
+		<div class="container" style=" text-align: center;">
+<h3 style="color:white; background-color:#373737;">Admissions Open</h3>
+</div>
+</div>	
+	
 	
     <div class="geu-accordion-content">
         <div class="container">
