--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@ Sys.WebForms.PageRequestManager.getInstance()._updateControls([], [], [], 90);
 					body {
 					    padding-top: 27%;
 					}
+				 
+				 .carousel-wrapper:first-child {
+    				padding-right: 0px;
+          }
+
+					.carousel-wrapper {
+    				display: inline-block;
+    				width: 100%;
+          }
 			 }
 
 			 #geu-celebration{
