--- a/index.html
+++ b/index.html
@@ -165,6 +165,11 @@ Sys.WebForms.PageRequestManager.getInstance()._updateControls([], [], [], 90);
     				display: inline-block;
     				width: 100%;
           }
+				 	#social-logo-banner{
+						padding-right: 3%;
+						padding-left: 3%;
+					}
+
 
 			 }
 
@@ -1287,7 +1292,7 @@ Sys.WebForms.PageRequestManager.getInstance()._updateControls([], [], [], 90);
         <br>
         <br>
         <footer>
-            <div class="container">
+            <div class="container" id="social-logo-banner">
                 <div class="text-center center-block">
                     <a href="https://www.facebook.com/GEUOfficial/" target="_blank" rel="noreferrer" data-ss1525723066="1"><i class="fab fa-facebook-f"></i></a>
                     <a href="https://twitter.com/GEU_Official" target="_blank" rel="noreferrer" data-ss1525723066="1"><i class="fab fa-twitter"></i></a>
