--- a/index.html
+++ b/index.html
@@ -2,7 +2,18 @@
 <!-- saved from url=(0038)http://gehu.ac.in/engg-admissions2018/ -->
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>
 	GEHU
-</title><meta name="viewport" content="width=1024"><link rel="stylesheet" href="./GEHU_files/style2.css" type="text/css"><link rel="stylesheet" href="./GEHU_files/bootstrap.min.css"><link rel="stylesheet" href="./GEHU_files/fontawesome-all.min.css"><link rel="stylesheet" href="./GEHU_files/geu-mainStyle.css" type="text/css"><link rel="stylesheet" href="./GEHU_files/custom-responsive-style.css" type="text/css"><link rel="stylesheet" href="./GEHU_files/owl.carousel.min.css" type="text/css"><link rel="stylesheet" href="./GEHU_files/owl.theme.default.min.css" type="text/css"><link rel="stylesheet" type="text/css" href="./GEHU_files/jquery.realperson.css">
+</title>
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<link rel="stylesheet" href="./GEHU_files/style2.css" type="text/css">
+<link rel="stylesheet" href="./GEHU_files/bootstrap.min.css">
+<link rel="stylesheet" href="./GEHU_files/fontawesome-all.min.css">
+<link rel="stylesheet" href="./GEHU_files/geu-mainStyle.css" type="text/css">
+<link rel="stylesheet" href="./GEHU_files/custom-responsive-style.css" type="text/css">
+<link rel="stylesheet" href="./GEHU_files/owl.carousel.min.css" type="text/css">
+<link rel="stylesheet" href="./GEHU_files/owl.theme.default.min.css" type="text/css">
+<link rel="stylesheet" type="text/css" href="./GEHU_files/jquery.realperson.css">	
+	
     <script src="./GEHU_files/jquery.min.js.download"></script>
     <script src="./GEHU_files/bootstrap.min.js.download"></script>
     <script type="text/javascript" src="./GEHU_files/owl.carousel.js.download"></script>
