--- a/index.html
+++ b/index.html
@@ -180,6 +180,16 @@ Sys.WebForms.PageRequestManager.getInstance()._updateControls([], [], [], 90);
 						padding-right: 3%;
 						padding-left: 3%;
 					}
+				 
+				 #equal-spacing{
+						padding-top: 3%;
+					}
+
+					.research-paper-section-wrapper.gehu {
+    padding: 20px 0 4px;
+          }
+
+
 
 
 			 }
@@ -484,7 +494,7 @@ Sys.WebForms.PageRequestManager.getInstance()._updateControls([], [], [], 90);
    </div>
 
 
-<div class="research-paper-section-wrapper gehu">
+<div class="research-paper-section-wrapper gehu" id="equal-spacing" >
         <div class="container">
 					<div class="row">
             <div class="next-generation-carousel owl-theme">
