--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@ Sys.WebForms.PageRequestManager.getInstance()._updateControls([], [], [], 90);
 			 @media only screen and (max-width: 480px) {
 			     #enquiry-form-visibility {
 			         right: 0px !important	;
+				     position: fixed;
 			     }
 
 					 .logo{
