--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ Sys.WebForms.PageRequestManager.getInstance()._updateControls([], [], [], 90);
         <div class="offer-section">
             <img src="./GEHU_files/offer.png" alt="GEHU offer">
         </div>
-     <ul class="enquire-now-form-content" id="enquiry-form-visibility" style="visibility: hidden ; right:40%;">
+     <ul class="enquire-now-form-content" id="enquiry-form-visibility" style="visibility: hidden ; right:40%; position: fixed; Top: 10%">
 
             <div id="divform">
                 <div class="form-group">
