--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@ Sys.WebForms.PageRequestManager.getInstance()._updateControls([], [], [], 90);
 							 position: fixed;
 							 z-index: 100000 !important;
 							 opacity: 1;
+							 scroll-behavior: auto;
 			     }
 
 					 .logo{
@@ -555,7 +556,7 @@ Sys.WebForms.PageRequestManager.getInstance()._updateControls([], [], [], 90);
 
     <div class="geu-accordion-content">
         <div class="container">
-		<h3 style="color:#dc2e27">Diploma Programmes</h3>
+		<h3 style="color:#FFFFFF">Diploma Programmes</h3>
 		<p style="color:white">Available at the Dehradun Campus & the Bhimtal Campus</p>
 		</br>
             <div class="panel-group" id="accordion">
@@ -612,7 +613,7 @@ Sys.WebForms.PageRequestManager.getInstance()._updateControls([], [], [], 90);
     </div>
  <div class="geu-accordion-content">
         <div class="container">
-		<h3 style="color:#dc2e27">Under Graduate Programmes</h3>
+		<h3 style="color:#FFFFFF">Under Graduate Programmes</h3>
 					<p style="color:white">Dehradun Campus</p>
 		</br>
             <div class="panel-group" id="accordion">
@@ -1036,7 +1037,7 @@ Sys.WebForms.PageRequestManager.getInstance()._updateControls([], [], [], 90);
     </div>
 	<div class="geu-accordion-content">
         <div class="container">
-		<h3 style="color:#dc2e27">Post Graduate Programmes</h3>
+		<h3 style="color:#FFFFFF">Post Graduate Programmes</h3>
 		<h5 style="color:white">Dehradun Campus</h5>
 		</br>
             <div class="panel-group" id="accordion">
