--- a/geu/index.html
+++ b/geu/index.html
@@ -547,54 +547,36 @@ Sys.WebForms.PageRequestManager.getInstance()._updateControls([], [], [], 90);
     </div>
     <div class="geu-accordion-content">
         <div class="container">
+		<h3 style="color:#dc2e27"> Under Graduate Programmes (2018-19)</h3></br>
             <div class="panel-group" id="accordion">
                 <div class="panel panel-default accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#panel1">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <a class="accordion-toggle"><i class="glyphicon glyphicon-minus"></i>Undergraduate Programs</a>
+                            <a class="accordion-toggle"><i class="glyphicon glyphicon-plus"></i>Engineering and Technology</a>
                         </h4>
                     </div>
-                    <div id="panel1" class="panel-collapse collapse in">
+                    <div id="panel1" class="panel-collapse collapse ">
                         <div class="panel-body">
                             <div id="collapseOne">
                                 <div>
                                     <div class="col-md-12 col-lg-12">
                                         <div class="">
-                                            <label>
-                                                B.Tech Programs</label>
-                                        </div>
-                                        <div class="">
-                                            <span>Specific specializations in the fields of</span>
-                                        </div>
-                                        <div class="">
-                                            <p>
-                                                Computer Science and Engineering | Electronics and Communication Engineering | Electronics
-                                                and Communication Engineering| Mobile Engineering | Information Technology | Mechanical
-                                                Engineering | Civil Engineering | Electrical Engineering | Biotechnology | Petroleum
-                                                Engineering</p>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-12 col-lg-12">
-                                        <div class="">
-                                            <label>
-                                                B.Tech Industry Collaboration</label>
-                                        </div>
-                                        <div class="">
-                                            <p>
-                                                B.Tech CSE with Open Specialization in Cloud Computing | Big Data Analytics | Cyber
-                                                Security | Mobile Computing | Internet of Things | B.Tech EE (Renewable Resources)</p>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-12 col-lg-12">
-                                        <div class="">
-                                            <label>
-                                                B.Tech in TATA Technologies Centre of Excellence Partner Labs</label>
-                                        </div>
-                                        <div class="">
-                                            <p>
-                                                B.Tech Mech Engineering with specialization in Automobile Engineering | Robotics
-                                                &amp; Automation| B.Tech Electronics and Communication Engineering (Internet of
-                                                Things)</p>
+                                            <p>B.Tech Computer Science and Engineering</p>
+										<p>B.Tech Computer Science and Engineering Hons. (Machine Learning)</p>
+                                        <p>B.Tech Computer Science and Engineering Hons. (Cloud Computing)</p>
+										<p>B.Tech Computer Science and Engineering Hons. (IOT)</p>
+										<p>B.Tech Computer Science and Engineering Hons. (Data Sciences &amp; AI)</p>
+										<p>B.Tech Information Technology</p>
+										<p>B.Tech Information Technology Hons. (Digital Transformation Engg.)</p>
+										<p>B.Tech Mechanical Engineering</p>
+										<p>B.Tech Mechanical Engineering Hons. (Robotics and Automation)</p>
+										<p>B.Tech Mechanical Engineering Hons. (Automobile)</p>
+										<p>B.Tech Civil Engineering</p>
+										<p>B.Tech Biotechnology</p>
+										<p>B.Tech Electronics and Communication Engineering</p>
+										<p>B.Tech Electronics and Communication Engineering (Embedded Systems &amp; Robotics)</p>
+										<p>B.Tech Electrical Engineering</p>
+										<p>B.Tech Petroleum Engineering</p>
                                         </div>
                                     </div>
                                 </div>
@@ -605,7 +587,7 @@ Sys.WebForms.PageRequestManager.getInstance()._updateControls([], [], [], 90);
                 <div class="panel panel-default accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#panel2">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <a class="accordion-toggle"><i class="glyphicon glyphicon-plus"></i>Post Graduate Programs</a>
+                            <a class="accordion-toggle"><i class="glyphicon glyphicon-plus"></i>BBA</a>
                         </h4>
                     </div>
                     <div id="panel2" class="panel-collapse collapse">
@@ -616,19 +598,221 @@ Sys.WebForms.PageRequestManager.getInstance()._updateControls([], [], [], 90);
                                         <div>
                                             <div class="col-md-12 col-lg-12">
                                                 <div class="">
-                                                    <label>
-                                                        M.Tech Programs</label>
+                                                     <p>BBA</p>
+											   <p>BBA International Finance and Accounting with ACCA</p>
+											   <p>BBA Corporate Accounting and Financial Analysis with CMA, US</p>
                                                 </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+				<div class="panel panel-default accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#panel3">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a class="accordion-toggle"><i class="glyphicon glyphicon-plus"></i>B.Com (H)</a>
+                        </h4>
+                    </div>
+                    <div id="panel3" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            <div>
+                                <div>
+                                    <div>
+                                        <div>
+                                            <div class="col-md-12 col-lg-12">
                                                 <div class="">
-                                                    <span>Specific specializations in the fields of</span>
+                                               <p>B.Com. (Hons)</p>
+											<p>B.Com. (Hons) International Finance and Accounting with ACCA, UK</p>
+											<p>B.Com. (Hons) Corporate Accounting and Financial Analysis with CMA, US</p><p>B.Com. (Hons)</p>
+											<p>B.Com. (Hons) International Finance and Accounting with ACCA, UK</p>
+											<p>B.Com. (Hons) Corporate Accounting and Financial Analysis with CMA, US</p>
                                                 </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+				<div class="panel panel-default accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#panel4">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a class="accordion-toggle"><i class="glyphicon glyphicon-plus"></i>Computer Applications</a>
+                        </h4>
+                    </div>
+                    <div id="panel4" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            <div>
+                                <div>
+                                    <div>
+                                        <div>
+                                            <div class="col-md-12 col-lg-12">
                                                 <div class="">
-                                                    <p>
-                                                        Computer Science| Petroleum Exploration| Bio Informatics| High Performance Computing
-                                                        | Structural Engineering | Geo-Informatics | Biotechnology | Instrumentation and
-                                                        Control Engg | CAD/CAM with specialization in Robotics &amp; Automation | CAD/CAM with
-                                                        specialization in Product Design | Geo-Informatics| Computer Network Engg | VLSI
-                                                        Design and System |Communication Systems| Control System</p>
+                                                <p>B.Sc. IT</p>
+											<p>B.Sc. IT Industry Integrated</p>
+											<p>BCA</p>
+											<p>BCA Industry Integrated</p>	
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+				<div class="panel panel-default accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#panel5">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a class="accordion-toggle"><i class="glyphicon glyphicon-plus"></i>Life Science</a>
+                        </h4>
+                    </div>
+                    <div id="panel5" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            <div>
+                                <div>
+                                    <div>
+                                        <div>
+                                            <div class="col-md-12 col-lg-12">
+                                                <div class="">
+                                               <p>B.Sc. (Hons) Microbiology</p>
+											 <p>B.Sc. (Hons) Biotechnology</p>
+											 <p>B.Sc. (Hons) Food Technology</p>		
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+				<div class="panel panel-default accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#panel6">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a class="accordion-toggle"><i class="glyphicon glyphicon-plus"></i>Humanities</a>
+                        </h4>
+                    </div>
+                    <div id="panel6" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            <div>
+                                <div>
+                                    <div>
+                                        <div>
+                                            <div class="col-md-12 col-lg-12">
+                                                <div class="">
+                                                  <p>BA Economics (Hons)</p>
+											  <p>BA Psychology (Hons)</p>
+											  <p>BA Political Science (Hons.)</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+				<h3 style="color:#dc2e27">Post Graduate Programmes(2018-19)</h3></br>
+				<div class="panel panel-default accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#panel7">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a class="accordion-toggle"><i class="glyphicon glyphicon-plus"></i>Engineering and Technology</a>
+                        </h4>
+                    </div>
+                    <div id="panel7" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            <div>
+                                <div>
+                                    <div>
+                                        <div>
+                                            <div class="col-md-12 col-lg-12">
+                                                <div class="">
+                                                     <p>M.Tech (Computer Science & Engg) </p>
+											<p>M.Tech Structural Engineering</p>
+											<p>M.Tech Geo-Informatics</p>
+											<p>M.Tech CAD/CAM/Robotics</p>
+											<p>M.Tech (VLSI Design and System)</p>
+											<p>M.Sc. (Information Technology) </p>	
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+				<div class="panel panel-default accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#panel8">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a class="accordion-toggle"><i class="glyphicon glyphicon-plus"></i>Life Science</a>
+                        </h4>
+                    </div>
+                    <div id="panel8" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            <div>
+                                <div>
+                                    <div>
+                                        <div>
+                                            <div class="col-md-12 col-lg-12">
+                                                <div class="">
+                                              <p>M.Sc. Biotechnology</p>
+											  <p>M.Sc. Microbiology</p>
+                                              <p>M.Sc. Bio-Chemistry</p>	
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+				<div class="panel panel-default accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#panel9">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a class="accordion-toggle"><i class="glyphicon glyphicon-plus"></i>Management Studies</a>
+                        </h4>
+                    </div>
+                    <div id="panel9" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            <div>
+                                <div>
+                                    <div>
+                                        <div>
+                                            <div class="col-md-12 col-lg-12">
+                                                <div class="">
+                                                  <p>MBA</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+				<div class="panel panel-default accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#panel10">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a class="accordion-toggle"><i class="glyphicon glyphicon-plus"></i>Computer Application</a>
+                        </h4>
+                    </div>
+                    <div id="panel10" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            <div>
+                                <div>
+                                    <div>
+                                        <div>
+                                            <div class="col-md-12 col-lg-12">
+                                                <div class="">
+                                                     <p>MCA</p>
+											   <p>MCA Lateral</p>
                                                 </div>
                                             </div>
                                         </div>
