--- a/geu/index.html
+++ b/geu/index.html
@@ -547,7 +547,7 @@ Sys.WebForms.PageRequestManager.getInstance()._updateControls([], [], [], 90);
     </div>
     <div class="geu-accordion-content">
         <div class="container">
-		<h3 style="color:#dc2e27"> Under Graduate Programmes (2018-19)</h3></br>
+		<h3 style="color:white"> Under Graduate Programmes (2018-19)</h3></br>
             <div class="panel-group" id="accordion">
                 <div class="panel panel-default accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#panel1">
                     <div class="panel-heading">
@@ -717,7 +717,7 @@ Sys.WebForms.PageRequestManager.getInstance()._updateControls([], [], [], 90);
                         </div>
                     </div>
                 </div>
-				<h3 style="color:#dc2e27">Post Graduate Programmes(2018-19)</h3></br>
+				<h3 style="color:white">Post Graduate Programmes(2018-19)</h3></br>
 				<div class="panel panel-default accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#panel7">
                     <div class="panel-heading">
                         <h4 class="panel-title">
