--- a/index.html
+++ b/index.html
@@ -57,14 +57,22 @@
 </script>
 <noscript><img src="https://pixel.everesttech.net/5445/t?ev_LP_Visit=1&ev_transid=<transid>" width="1" height="1"/></noscript>
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122825587-1"></script>
+
+<!-- Global site tag (gtag.js) - Google AdWords: 813011093 -->
+
+<script async="" src="./GEHU_files/js"></script>
+
 <script>
+
   window.dataLayer = window.dataLayer || [];
+
   function gtag(){dataLayer.push(arguments);}
+
   gtag('js', new Date());
 
-  gtag('config', 'UA-122825587-1');
+
+
+  gtag('config', 'AW-813011093');
 </script>
 
 
