--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!-- saved from url=(0038)http://gehu.ac.in/engg-admissions2018/ -->
-<html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>
+<html xmlns="http://www.w3.org/1999/xhtml"><head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122832532-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-122832532-1');
+</script>
+
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>
 	GEHU
 </title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -56,23 +67,6 @@
     })();
 </script>
 <noscript><img src="https://pixel.everesttech.net/5445/t?ev_LP_Visit=1&ev_transid=<transid>" width="1" height="1"/></noscript>
-
-
-<!-- Global site tag (gtag.js) - Google AdWords: 813011093 -->
-
-<script async="" src="./GEHU_files/js"></script>
-
-<script>
-
-  window.dataLayer = window.dataLayer || [];
-
-  function gtag(){dataLayer.push(arguments);}
-
-  gtag('js', new Date());
-
-
-
-  gtag('config', 'AW-813011093');
 </script>
 
 
